Fixed bad anton's code

--- a/feedback.html
+++ b/feedback.html
@@ -138,10 +138,10 @@
                                         <img src="img/case/case7.png" alt="">
                                     </div>
                                     <div class="author_name">
-                                        <h3>Анна</h3>
+                                        <h3 style="color: white">Анна</h3>
                                         <span>
                                             <div class="media contact-info">
-                                                <span class="contact-info__icon"><i class="fa fa-instagram"
+                                                <span class="contact-info__icon"><i class="fa fa-instagram" style="color: #DB9A64"
                                                         aria-hidden="true"></i></span>
                                                 <div class="media-body fo">
                                                     <h3><a href="https://www.instagram.com/ann_minko/" target="_blank">
@@ -177,10 +177,10 @@
                                         <img src="img/case/case6.png" alt="">
                                     </div>
                                     <div class="author_name">
-                                        <h3>Александр</h3>
+                                        <h3 style="color: white">Александр</h3>
                                         <span>
                                             <div class="media contact-info">
-                                                <span class="contact-info__icon"><i class="fa fa-instagram"
+                                                <span class="contact-info__icon"><i class="fa fa-instagram" style="color: #DB9A64"
                                                         aria-hidden="true"></i></span>
                                                 <div class="media-body fo">
                                                     <h3><a href="https://www.instagram.com/shalom_byrber/"
@@ -211,10 +211,10 @@
                                         <img src="img/case/case72.png" alt="">
                                     </div>
                                     <div class="author_name">
-                                        <h3>Олег</h3>
+                                        <h3 style="color: white">Олег</h3>
                                         <span>
                                             <div class="media contact-info">
-                                                <span class="contact-info__icon"><i class="fa fa-instagram"
+                                                <span class="contact-info__icon"><i class="fa fa-instagram" style="color: #DB9A64"
                                                         aria-hidden="true"></i></span>
                                                 <div class="media-body fo">
                                                     <h3><a href="https://www.instagram.com/by_olegminko/"
@@ -237,8 +237,8 @@
                         <div class="col-xl-12 col-md-9">
                             <div class="single_testmonial">
                                 <p>"Я мала можливість попрацювати з Антоном на зйомках короткометражного фільму. Дуже
-                                    якісний оператор,який бачить чудові кадри і вміє спілкуватись з режисером. Бажання
-                                    працювати,було не вщухало протягом усієї зйомки. Пунктуальний і просто хороша
+                                    якісний оператор, який бачить чудові кадри і вміє спілкуватись з режисером. Бажання
+                                    працювати, було не вщухало протягом усієї зйомки. Пунктуальний і просто хороша
                                     людина. Якість роботи і комфорт буде Вам гарантовано!
                                     "
                                 </p>
@@ -247,10 +247,10 @@
                                         <img src="img/case/case2.png" alt="">
                                     </div>
                                     <div class="author_name">
-                                        <h3>Iрина</h3>
+                                        <h3 style="color: white">Iрина</h3>
                                         <span>
                                             <div class="media contact-info">
-                                                <span class="contact-info__icon"><i class="fa fa-instagram"
+                                                <span class="contact-info__icon"><i class="fa fa-instagram" style="color: #DB9A64"
                                                         aria-hidden="true"></i></span>
                                                 <div class="media-body fo">
                                                     <h3><a href="https://www.instagram.com/Irka_paniv/" target="_blank">
@@ -266,49 +266,51 @@
                             </div>
                         </div>
                     </div>
-                </div>
 
-                <div class="row border border-bottom-0 border-left-0 border-right-0" style="margin-bottom: 50px">
-                    <div class="col-xl-12 col-md-9">
-                        <div class="single_testmonial">
-                            <p>"У нас была интересная съемка короткого метра, мы за один день сняли фильм с
-                                длительностью 10мин. результатом я доволен) Антон был в качестве автора сценария, и
-                                оператора. Мне очень понравилось работать с ним, он очень интересный человек, и
-                                профессионал своего дела.) Я думаю что в ближайшее время мы еще поработаем! Удачи, до
-                                скорых встреч) Рекомендую!"
-                            </p>
-                            <div class="testmonial_author">
-                                <div class="thumb">
-                                    <img src="img/case/case8.png" alt="">
-                                </div>
-                                <div class="author_name">
-                                    <h3>Иван</h3>
-                                    <span>
-                                        <div class="media contact-info">
-                                            <span class="contact-info__icon"><i class="fa fa-instagram"
-                                                    aria-hidden="true"></i></span>
-                                            <div class="media-body fo">
-                                                <h3><a href="https://www.instagram.com/Voronoi.ivan/" target="_blank">
-                                                        <font size="4">Instagram</font>
-                                                    </a></h3>
+
+                    <div class="row border border-bottom-0 border-left-0 border-right-0" style="margin-bottom: 50px">
+                        <div class="col-xl-12 col-md-9">
+                            <div class="single_testmonial">
+                                <p>"У нас была интересная съемка короткого метра, мы за один день сняли фильм с
+                                    длительностью 10мин. результатом я доволен) Антон был в качестве автора сценария, и
+                                    оператора. Мне очень понравилось работать с ним, он очень интересный человек, и
+                                    профессионал своего дела.) Я думаю что в ближайшее время мы еще поработаем! Удачи,
+                                    до
+                                    скорых встреч) Рекомендую!"
+                                </p>
+                                <div class="testmonial_author">
+                                    <div class="thumb">
+                                        <img src="img/case/case8.png" alt="">
+                                    </div>
+                                    <div class="author_name">
+                                        <h3  style="color: white">Иван</h3>
+                                        <span>
+                                            <div class="media contact-info">
+                                                <span class="contact-info__icon"><i class="fa fa-instagram" style="color: #DB9A64"
+                                                        aria-hidden="true"></i></span>
+                                                <div class="media-body fo">
+                                                    <h3><a href="https://www.instagram.com/Voronoi.ivan/"
+                                                            target="_blank">
+                                                            <font size="4">Instagram</font>
+                                                        </a></h3>
+                                                </div>
                                             </div>
-                                        </div>
-                                    </span>
+                                        </span>
+                                    </div>
+                                    <br />
+                                    <a class="boxed-btn3-line" href="project3.html">СМОТРЕТЬ РАБОТУ</a>
                                 </div>
-                                <br />
-                                <a class="boxed-btn3-line" href="project3.html">СМОТРЕТЬ РАБОТУ</a>
                             </div>
                         </div>
                     </div>
                 </div>
+
+
+
+
+
             </div>
-
-
-
-
-
         </div>
-    </div>
     </div>
     <!-- /testimonial_area  -->
 
