--- a/index.html
+++ b/index.html
@@ -219,10 +219,10 @@
                                                 <img src="img/case/case7.png" alt="">
                                             </div>
                                             <div class="author_name">
-                                                <h3>Анна</h3>
+                                                <h3 style="color: white">Анна</h3>
                                                 <span>
                                                     <div class="media contact-info">
-                                                        <span class="contact-info__icon"><i class="fa fa-instagram"
+                                                        <span class="contact-info__icon"><i class="fa fa-instagram" style="color: #DB9A64"
                                                                 aria-hidden="true"></i></span>
                                                         <div class="media-body fo">
                                                             <h3><a href="https://www.instagram.com/ann_minko/"
@@ -257,10 +257,10 @@
                                                 <img src="img/case/case6.png" alt="">
                                             </div>
                                             <div class="author_name">
-                                                <h3>Александр</h3>
+                                                <h3 style="color: white">Александр</h3>
                                                 <span>
                                                     <div class="media contact-info">
-                                                        <span class="contact-info__icon"><i class="fa fa-instagram"
+                                                        <span class="contact-info__icon"><i class="fa fa-instagram" style="color: #DB9A64"
                                                                 aria-hidden="true"></i></span>
                                                         <div class="media-body fo">
                                                             <h3><a href="https://www.instagram.com/shalom_byrber/"
@@ -293,10 +293,10 @@
                                                 <img src="img/case/case72.png" alt="">
                                             </div>
                                             <div class="author_name">
-                                                <h3>Олег</h3>
+                                                <h3 style="color: white">Олег</h3>
                                                 <span>
                                                     <div class="media contact-info">
-                                                        <span class="contact-info__icon"><i class="fa fa-instagram"
+                                                        <span class="contact-info__icon"><i class="fa fa-instagram" style="color: #DB9A64"
                                                                 aria-hidden="true"></i></span>
                                                         <div class="media-body fo">
                                                             <h3><a href="https://www.instagram.com/by_olegminko/"
@@ -321,8 +321,8 @@
                                 <div class="col-xl-9 col-md-9">
                                     <div class="single_testmonial">
                                         <p>"Я мала можливість попрацювати з Антоном на зйомках короткометражного фільму.
-                                            Дуже якісний оператор,який бачить чудові кадри і вміє спілкуватись з
-                                            режисером. Бажання працювати,було не вщухало протягом усієї зйомки.
+                                            Дуже якісний оператор, який бачить чудові кадри і вміє спілкуватись з
+                                            режисером. Бажання працювати, було не вщухало протягом усієї зйомки.
                                             Пунктуальний і просто хороша людина. Якість роботи і комфорт буде Вам
                                             гарантовано!"
                                         </p>
@@ -331,10 +331,10 @@
                                                 <img src="img/case/case2.png" alt="">
                                             </div>
                                             <div class="author_name">
-                                                <h3>Iрина</h3>
+                                                <h3 style="color: white">Iрина</h3>
                                                 <span>
                                                     <div class="media contact-info">
-                                                        <span class="contact-info__icon"><i class="fa fa-instagram"
+                                                        <span class="contact-info__icon"><i class="fa fa-instagram" style="color: #DB9A64"
                                                                 aria-hidden="true"></i></span>
                                                         <div class="media-body fo">
                                                             <h3><a href="https://www.instagram.com/Irka_paniv/"
@@ -367,10 +367,10 @@
                                                 <img src="img/case/case8.png" alt="">
                                             </div>
                                             <div class="author_name">
-                                                <h3>Иван</h3>
+                                                <h3 style="color: white">Иван</h3>
                                                 <span>
                                                     <div class="media contact-info">
-                                                        <span class="contact-info__icon"><i class="fa fa-instagram"
+                                                        <span class="contact-info__icon"><i class="fa fa-instagram" style="color: #DB9A64"
                                                                 aria-hidden="true"></i></span>
                                                         <div class="media-body fo">
                                                             <h3><a href="https://www.instagram.com/Voronoi.ivan/"
