--- a/project7.html
+++ b/project7.html
@@ -164,10 +164,10 @@
                                         <img src="img/case/case7.png" alt="">
                                     </div>
                                     <div class="author_name">
-                                        <h3>Анна</h3>
+                                        <h3 style="color: white">Анна</h3>
                                         <span>
                                             <div class="media contact-info">
-                                                <span class="contact-info__icon"><i class="fa fa-instagram"
+                                                <span class="contact-info__icon"><i class="fa fa-instagram" style="color: #DB9A64"
                                                         aria-hidden="true"></i></span>
                                                 <div class="media-body fo">
                                                     <h3><a href="https://www.instagram.com/ann_minko/" target="_blank">
@@ -194,10 +194,10 @@
                                             <img src="img/case/case72.png" alt="">
                                         </div>
                                         <div class="author_name">
-                                            <h3>Олег</h3>
+                                            <h3 style="color: white">Олег</h3>
                                             <span>
                                                 <div class="media contact-info">
-                                                    <span class="contact-info__icon"><i class="fa fa-instagram"
+                                                    <span class="contact-info__icon"><i class="fa fa-instagram" style="color: #DB9A64"
                                                             aria-hidden="true"></i></span>
                                                     <div class="media-body fo">
                                                         <h3><a href="https://www.instagram.com/by_olegminko/"
