--- a/project2.html
+++ b/project2.html
@@ -17,8 +17,8 @@
     <meta name="keywords"
         content="Антон Грищенко, РОКЗАРОГОМ , короткометражный фильм РОКЗАРОГОМ, Грищенко, моя работа Грищенко, грищенко работы, Грищенко портфолио, Грищенко оператор, Видеооператор в Киеве, сценарист киев, монтаж киев, видеосьемка киев, сьемка клипов, отзывы Антон Грищенко, видеосъемка интервью, сьемка фильмов, сьемка короткометражного кино, создание промороликов, съемка backstage, съемка для YouTube
         , написание сценариев киев, монтаж видео, запись дикторского текста, сьемка рекламы,  tonyonair, Антон Грищенко инстаграм, антон Грищенко instagram, Грищенко Youtube, сьемка в киеве недорого, Грищенко телеграм, видеооператор связаться" />
-    
-        <meta property="og:type" content="website" />
+
+    <meta property="og:type" content="website" />
     <meta name="og:site_name" content="TonyOnAir. Видеосъемка, видеооператор в Киеве, видеограф, сценарист, монтажер" />
     <meta property="og:title"
         content="TonyOnAir. Видеооператор в Киеве. Видеосъемка. Видеограф - ArtSpace Видеосъемка, видеооператор в Киеве, видеограф" />
@@ -26,7 +26,8 @@
         content="TonyOnAir. Видеосъемка, видеооператор в Киеве, видеограф, сценарист, монтажер" />
     <meta property="og:url" content="https://tonyonair.com.ua" />
 
-    <meta name="description" content="Антон Грищенко, РОКЗАРОГОМ , короткометражный фильм РОКЗАРОГОМ, моя работа Грищенко, Грищенко портфолио, оператор киев портфолил" />
+    <meta name="description"
+        content="Антон Грищенко, РОКЗАРОГОМ , короткометражный фильм РОКЗАРОГОМ, моя работа Грищенко, Грищенко портфолио, оператор киев портфолил" />
     <meta name="language" content="RU">
     <meta name="robots" content="index, follow">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -155,137 +156,140 @@
         </div>
     </div>
 
- <!-- testimonial_area  -->
- <div class="testimonial_area ">
-    <div class="container" style="margin-top: 0; margin-bottom: 50px">
-        <div class="row">
-            <div class="col-xl-12">
-                <div class="section_title">
-                    <h3>Отзывы</h3>
+    <!-- testimonial_area  -->
+    <div class="testimonial_area ">
+        <div class="container" style="margin-top: 0; margin-bottom: 50px">
+            <div class="row">
+                <div class="col-xl-12">
+                    <div class="section_title">
+                        <h3>Отзывы</h3>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-xl-12">
+            <div class="row">
+                <div class="col-xl-12">
 
 
-                <div class="row">
-                    <div class="col-xl-12 col-md-9">
-                        <div class="single_testmonial">
-                            <p>"Я мала можливість попрацювати з Антоном на зйомках короткометражного фільму. Дуже якісний оператор,який бачить чудові кадри і вміє спілкуватись з режисером. Бажання працювати,було не вщухало протягом усієї зйомки. Пунктуальний і просто хороша людина. Якість роботи і комфорт буде Вам гарантовано!
-                                "
-                            </p>
-                            <div class="testmonial_author">
-                                <div class="thumb">
-                                    <img src="img/case/case2.png" alt="">
-                                </div>
-                                <div class="author_name">
-                                    <h3>Iрина</h3>
-                                    <span>
-                                        <div class="media contact-info">
-                                            <span class="contact-info__icon"><i class="fa fa-instagram"
-                                                    aria-hidden="true"></i></span>
-                                            <div class="media-body fo">
-                                                <h3><a href="https://www.instagram.com/Irka_paniv/" target="_blank">
-                                                        <font size="4">Instagram</font>
-                                                    </a></h3>
+                    <div class="row">
+                        <div class="col-xl-12 col-md-9">
+                            <div class="single_testmonial">
+                                <p>"Я мала можливість попрацювати з Антоном на зйомках короткометражного фільму. Дуже
+                                    якісний оператор, який бачить чудові кадри і вміє спілкуватись з режисером. Бажання
+                                    працювати, було не вщухало протягом усієї зйомки. Пунктуальний і просто хороша
+                                    людина. Якість роботи і комфорт буде Вам гарантовано!
+                                    "
+                                </p>
+                                <div class="testmonial_author">
+                                    <div class="thumb">
+                                        <img src="img/case/case2.png" alt="">
+                                    </div>
+                                    <div class="author_name">
+                                        <h3 style="color: white">Iрина</h3>
+                                        <span>
+                                            <div class="media contact-info">
+                                                <span class="contact-info__icon"><i class="fa fa-instagram"
+                                                        style="color: #DB9A64" aria-hidden="true"></i></span>
+                                                <div class="media-body fo">
+                                                    <h3><a href="https://www.instagram.com/Irka_paniv/" target="_blank">
+                                                            <font size="4">Instagram</font>
+                                                        </a></h3>
+                                                </div>
+                                            </div>
+                                        </span>
+                                    </div </div> </div> </div> </div> </div> </div> </div> </div> <!-- /testimonial_area
+                                        -->
+
+                                    <!-- footer start -->
+                                    <footer class="footer ">
+                                        <div class="footer_top">
+                                            <div class="container">
+                                                <div class="row justify-content-center">
+                                                    <div class="col-md-3"><a
+                                                            href="https://www.youtube.com/channel/UCX5pULXfxEvFd63sV4rYzXQ"
+                                                            target="_blank">
+                                                            <div
+                                                                class="single_links d-flex justify-content-between align-items-center">
+                                                                <span>YouTube</span>
+                                                            </div>
+                                                        </a>
+                                                    </div>
+                                                    <div class="col-md-3"><a
+                                                            href="https://www.instagram.com/tony_on_air/"
+                                                            target="_blank">
+                                                            <div
+                                                                class="single_links d-flex justify-content-between align-items-center">
+                                                                <span>Instagram</span>
+                                                            </div>
+                                                        </a>
+                                                    </div>
+                                                    <div class="col-md-3"><a href="https://t.me/tonyonair"
+                                                            target="_blank">
+                                                            <div
+                                                                class="single_links d-flex justify-content-between align-items-center">
+                                                                <span>Telegram</span>
+                                                            </div>
+                                                        </a>
+                                                    </div>
+                                                </div>
                                             </div>
                                         </div>
-                                    </span>
-                                </div
-                            </div>
-                        </div>
+                                        <div class="copy-right_text">
+                                            <div class="container">
+                                                <div class="footer_border"></div>
+                                                <div class="row">
+                                                    <div class="col-xl-12">
+                                                        <p class="copy_right text-center">
+                                                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                                                            Copyright &copy;
+                                                            <script>document.write(new Date().getFullYear());</script>
+                                                            All rights reserved | This
+                                                            template is made with <i class="fa fa-heart-o"
+                                                                aria-hidden="true"></i> by <a
+                                                                href="https://colorlib.com" target="_blank">Colorlib</a>
+                                                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                                                        </p>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </footer>
+                                    <!--/ footer end  -->
 
-                    </div>
- 
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- /testimonial_area  -->
-
-    <!-- footer start -->
-    <footer class="footer ">
-        <div class="footer_top">
-            <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-md-3"><a href="https://www.youtube.com/channel/UCX5pULXfxEvFd63sV4rYzXQ"
-                            target="_blank">
-                            <div class="single_links d-flex justify-content-between align-items-center">
-                                <span>YouTube</span>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-md-3"><a href="https://www.instagram.com/tony_on_air/" target="_blank">
-                            <div class="single_links d-flex justify-content-between align-items-center">
-                                <span>Instagram</span>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-md-3"><a href="https://t.me/tonyonair" target="_blank">
-                            <div class="single_links d-flex justify-content-between align-items-center">
-                                <span>Telegram</span>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="copy-right_text">
-            <div class="container">
-                <div class="footer_border"></div>
-                <div class="row">
-                    <div class="col-xl-12">
-                        <p class="copy_right text-center">
-                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                            Copyright &copy;
-                            <script>document.write(new Date().getFullYear());</script> All rights reserved | This
-                            template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a
-                                href="https://colorlib.com" target="_blank">Colorlib</a>
-                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer>
-    <!--/ footer end  -->
-
-    <!-- link that opens popup -->
-    <script src=" https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"> </script>
-    <!-- JS here -->
-    <script src="js/vendor/modernizr-3.5.0.min.js"></script>
-    <script src="js/vendor/jquery-1.12.4.min.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/isotope.pkgd.min.js"></script>
-    <script src="js/ajax-form.js"></script>
-    <script src="js/waypoints.min.js"></script>
-    <script src="js/jquery.counterup.min.js"></script>
-    <script src="js/imagesloaded.pkgd.min.js"></script>
-    <script src="js/scrollIt.js"></script>
-    <script src="js/jquery.scrollUp.min.js"></script>
-    <script src="js/wow.min.js"></script>
-    <script src="js/nice-select.min.js"></script>
-    <script src="js/jquery.slicknav.min.js"></script>
-    <script src="js/jquery.magnific-popup.min.js"></script>
-    <script src="js/plugins.js"></script>
-    <!-- <script src="js/gijgo.min.js"></script> -->
-    <script src="js/slick.min.js"></script>
+                                    <!-- link that opens popup -->
+                                    <script
+                                        src=" https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"> </script>
+                                    <!-- JS here -->
+                                    <script src="js/vendor/modernizr-3.5.0.min.js"></script>
+                                    <script src="js/vendor/jquery-1.12.4.min.js"></script>
+                                    <script src="js/popper.min.js"></script>
+                                    <script src="js/bootstrap.min.js"></script>
+                                    <script src="js/owl.carousel.min.js"></script>
+                                    <script src="js/isotope.pkgd.min.js"></script>
+                                    <script src="js/ajax-form.js"></script>
+                                    <script src="js/waypoints.min.js"></script>
+                                    <script src="js/jquery.counterup.min.js"></script>
+                                    <script src="js/imagesloaded.pkgd.min.js"></script>
+                                    <script src="js/scrollIt.js"></script>
+                                    <script src="js/jquery.scrollUp.min.js"></script>
+                                    <script src="js/wow.min.js"></script>
+                                    <script src="js/nice-select.min.js"></script>
+                                    <script src="js/jquery.slicknav.min.js"></script>
+                                    <script src="js/jquery.magnific-popup.min.js"></script>
+                                    <script src="js/plugins.js"></script>
+                                    <!-- <script src="js/gijgo.min.js"></script> -->
+                                    <script src="js/slick.min.js"></script>
 
 
 
-    <!--contact js-->
-    <script src="js/contact.js"></script>
-    <script src="js/jquery.ajaxchimp.min.js"></script>
-    <script src="js/jquery.form.js"></script>
-    <script src="js/jquery.validate.min.js"></script>
-    <script src="js/mail-script.js"></script>
+                                    <!--contact js-->
+                                    <script src="js/contact.js"></script>
+                                    <script src="js/jquery.ajaxchimp.min.js"></script>
+                                    <script src="js/jquery.form.js"></script>
+                                    <script src="js/jquery.validate.min.js"></script>
+                                    <script src="js/mail-script.js"></script>
 
 
-    <script src="js/main.js"></script>
+                                    <script src="js/main.js"></script>
 </body>
 
 </html>
