--- a/project3.html
+++ b/project3.html
@@ -186,10 +186,10 @@
                                         <img src="img/case/case8.png" alt="">
                                     </div>
                                     <div class="author_name">
-                                        <h3>Иван</h3>
+                                        <h3 style="color: white">Иван</h3>
                                         <span>
                                             <div class="media contact-info">
-                                                <span class="contact-info__icon"><i class="fa fa-instagram"
+                                                <span class="contact-info__icon"><i class="fa fa-instagram" style="color: #DB9A64"
                                                         aria-hidden="true"></i></span>
                                                 <div class="media-body fo">
                                                     <h3><a href="https://www.instagram.com/Voronoi.ivan/"
