--- a/project6.html
+++ b/project6.html
@@ -181,10 +181,10 @@
                                         <img src="img/case/case6.png" alt="">
                                     </div>
                                     <div class="author_name">
-                                        <h3>Александр</h3>
+                                        <h3 style="color: white">Александр</h3>
                                         <span>
                                             <div class="media contact-info">
-                                                <span class="contact-info__icon"><i class="fa fa-instagram"
+                                                <span class="contact-info__icon"><i class="fa fa-instagram" style="color: #DB9A64"
                                                         aria-hidden="true"></i></span>
                                                         <div class="media-body fo">
                                                             <h3><a href="https://www.instagram.com/shalom_byrber/"
