--- a/contact.html
+++ b/contact.html
@@ -126,7 +126,7 @@
 
       <div class="row">
         <div class="col-12">
-          <h2 class="contact-title">По любым вопросам пишите:</h2>
+          <h2 class="contact-title">По любым вопросам обращайтесь:</h2>
         </div>
 
         <div class="col-lg-4">
@@ -136,20 +136,20 @@
               <h3>Украина, город Киев</h3>
             </div>
           </div>
-          <!-- <div class="media contact-info">
+          <div class="media contact-info">
             <span class="contact-info__icon"><i class="ti-tablet"></i></span>
             <div class="media-body">
-              <h3>00 (440) 9865 562</h3>
-              <p>Mon to Fri 9am to 6pm</p>
-            </div>
-          </div> -->
-          <div class="media contact-info">
-            <span class="contact-info__icon"><i class="fa fa-instagram" aria-hidden="true"></i></span>
-            <div class="media-body">
-              <h3><a href="https://www.instagram.com/tony_on_air" target="_blank">tony_on_air</a></h3>
+              <h3><a href="callto:+380986929627">+380986929627</a></h3>
+              <p>Kyivstar</p>
             </div>
           </div>
-          <div class="media contact-info">
+		   <div class="media contact-info">
+            <span class="contact-info__icon"><i class="ti-email"></i></span>
+            <div class="media-body">
+              <h3><a href="mailto: hi.tonyonair@gmail.com" target="_blank">hi.tonyonair@gmail.com</a></h3>	
+            </div>
+          </div>
+		            <div class="media contact-info">
             <span class="contact-info__icon"><i class="fa fa-youtube" aria-hidden="true"></i></span>
             <div class="media-body">
               <h3><a href="https://www.youtube.com/channel/UCX5pULXfxEvFd63sV4rYzXQ" target="_blank">Антон Грищенко</a>
@@ -157,17 +157,17 @@
             </div>
           </div>
           <div class="media contact-info">
+            <span class="contact-info__icon"><i class="fa fa-instagram" aria-hidden="true"></i></span>
+            <div class="media-body">
+              <h3><a href="https://www.instagram.com/tony_on_air" target="_blank">tony_on_air</a></h3>
+            </div>
+          </div>
+          <div class="media contact-info">
             <span class="contact-info__icon"><i class="fa fa-telegram" style="font-size:24px"></i></span>
             <div class="media-body">
               <h3><a href="https://t.me/tonyonair" target="_blank">@tonyonair</a></h3>
             </div>
-          </div>
-          <div class="media contact-info">
-            <span class="contact-info__icon"><i class="ti-email"></i></span>
-            <div class="media-body">
-              <h3><a href="mailto: hi.tonyonair@gmail.com" target="_blank">hi.tonyonair@gmail.com</a></h3>
-            </div>
-          </div>
+          </div>       
         </div>
       </div>
     </div>
