--- a/project3.html
+++ b/project3.html
@@ -89,7 +89,7 @@
                             <div class="col-xl-3 col-lg-3 d-none d-lg-block">
                                 <div class="Appointment">
                                     <div class="book_btn d-none d-lg-block">
-                                        <a href="https://t.me/tonyonair" target="_blank">СВЯЗАТЬСЯ</a>
+                                            <a href="contact.html">СВЯЗАТЬСЯ</a>
                                     </div>
                                 </div>
                             </div>
@@ -211,29 +211,38 @@
         </div>
         <!-- /testimonial_area  -->
 
-        <!-- footer start -->
-        <footer class="footer ">
+       <!-- footer start -->
+    <footer class="footer">
             <div class="footer_top">
                 <div class="container">
                     <div class="row justify-content-center">
-                        <div class="col-md-3"><a href="https://www.youtube.com/channel/UCX5pULXfxEvFd63sV4rYzXQ"
-                                target="_blank">
+                        <div class="col-md-3"><a href="contact.html"
+                               >
                                 <div class="single_links d-flex justify-content-between align-items-center">
-                                    <span>YouTube</span>
+                                    <span>Контакты</span>
                                 </div>
                             </a>
                         </div>
-                        <div class="col-md-3"><a href="https://www.instagram.com/tony_on_air/" target="_blank">
-                                <div class="single_links d-flex justify-content-between align-items-center">
-                                    <span>Instagram</span>
-                                </div>
-                            </a>
+                        <div class="col-md-3"><a href="works.html"
+                          >
+                            <div class="single_links d-flex justify-content-between align-items-center">
+                                <span>Работы</span>
+                            </div>
+                        </a>
                         </div>
-                        <div class="col-md-3"><a href="https://t.me/tonyonair" target="_blank">
-                                <div class="single_links d-flex justify-content-between align-items-center">
-                                    <span>Telegram</span>
-                                </div>
-                            </a>
+                        <div class="col-md-3"><a href="services.html"
+                          >
+                            <div class="single_links d-flex justify-content-between align-items-center">
+                                <span>Услуги и цены</span>
+                            </div>
+                        </a>
+                        </div>
+                        <div class="col-md-3"><a href="feedback.html"
+                           >
+                            <div class="single_links d-flex justify-content-between align-items-center">
+                                <span>Отзывы</span>
+                            </div>
+                        </a>
                         </div>
                     </div>
                 </div>
