--- a/contact.html
+++ b/contact.html
@@ -14,13 +14,12 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>Антон Грищенко. Контакты</title>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <meta name="keywords"
-    content=" Антон Грищенко, Антон грищенко контакты, Антон грищенко связаться, Грищенко мои контакты, Грищенко контакты, Антон Грищенко инстаграм, Антон грищенко телеграм, Антон Грищенко ютуб, Антон грищенко instagram, антон грищенко почта, грищенко написать, сьемка киев контакты, оператор контакты, монтажер контакты, сценарист контакты, сценарист недорого контакты, оператор контакты недорого, видеооператор киев контакты, сценарист киев контакты, монтажер киев контакты, 
+  <meta name="keywords" content=" Антон Грищенко, Антон грищенко контакты, Антон грищенко связаться, Грищенко мои контакты, Грищенко контакты, Антон Грищенко инстаграм, Антон грищенко телеграм, Антон Грищенко ютуб, Антон грищенко instagram, антон грищенко почта, грищенко написать, сьемка киев контакты, оператор контакты, монтажер контакты, сценарист контакты, сценарист недорого контакты, оператор контакты недорого, видеооператор киев контакты, сценарист киев контакты, монтажер киев контакты, 
     Грищенко оператор, Видеооператор в Киеве, сценарист киев, монтаж киев, видеосьемка киев, сьемка клипов, отзывы Антон Грищенко, видеосъемка интервью, сьемка фильмов, сьемка короткометражного кино, создание промороликов, съемка backstage, съемка для YouTube
     , написание сценариев киев, монтаж видео, запись дикторского текста, сьемка рекламы,  tonyonair, Антон Грищенко инстаграм, антон Грищенко instagram, Грищенко Youtube, сьемка в киеве недорого, Грищенко телеграм, видеооператор связаться
    " />
-  
-    <meta property="og:type" content="website" />
+
+  <meta property="og:type" content="website" />
   <meta name="og:site_name" content="TonyOnAir. Видеосъемка, видеооператор в Киеве, видеограф, сценарист, монтажер" />
   <meta property="og:title"
     content="TonyOnAir. Видеооператор в Киеве. Видеосъемка. Видеограф - ArtSpace Видеосъемка, видеооператор в Киеве, видеограф" />
@@ -28,7 +27,8 @@
     content="TonyOnAir. Видеосъемка, видеооператор в Киеве, видеограф, сценарист, монтажер" />
   <meta property="og:url" content="https://tonyonair.com.ua" />
 
-  <meta name="description" content="Антон Грищенко, Антон грищенко контакты, Антон грищенко связаться, Грищенко мои контакты, Грищенко контакты, видеооператор киев контакты, сценарист киев контакты, монтажер киев контакты" />
+  <meta name="description"
+    content="Антон Грищенко, Антон грищенко контакты, Антон грищенко связаться, Грищенко мои контакты, Грищенко контакты, видеооператор киев контакты, сценарист киев контакты, монтажер киев контакты" />
   <meta name="language" content="RU">
   <meta name="robots" content="index, follow">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -77,22 +77,22 @@
                 <div class="main-menu  d-none d-lg-block">
                   <nav>
                     <ul id="navigation">
-                        <li><a href="index.html">О СЕБЕ</a></li>
-                        <li><a href="works.html">РАБОТЫ</a></li>
-                        <li><a href="services.html">УСЛУГИ И ЦЕНЫ</a></li>
-                        <li><a href="feedback.html">ОТЗЫВЫ</a></li>
-                        <li><a href="contact.html">КОНТАКТЫ</a></li>
+                      <li><a href="index.html">О СЕБЕ</a></li>
+                      <li><a href="works.html">РАБОТЫ</a></li>
+                      <li><a href="services.html">УСЛУГИ И ЦЕНЫ</a></li>
+                      <li><a href="feedback.html">ОТЗЫВЫ</a></li>
+                      <li><a href="contact.html">КОНТАКТЫ</a></li>
                     </ul>
-                </nav>
+                  </nav>
                 </div>
               </div>
-              <div class="col-xl-3 col-lg-3 d-none d-lg-block">
+              <!-- <div class="col-xl-3 col-lg-3 d-none d-lg-block">
                 <div class="Appointment">
                   <div class="book_btn d-none d-lg-block">
-                    <a href="https://t.me/tonyonair" target="_blank">СВЯЗАТЬСЯ</a>
+                    <a href="contact.html" target="_blank">СВЯЗАТЬСЯ</a>
                   </div>
                 </div>
-              </div>
+              </div> -->
               <div class="col-12">
                 <div class="mobile_menu d-block d-lg-none"></div>
               </div>
@@ -112,6 +112,8 @@
         <div class="col-xl-12">
           <div class="bradcam_text text-center">
             <h3 style="text-transform: none;">Мои контакты</h3>
+            <br/>
+            <p style="text-transform: none;">Выберете любой удобный для Вас способ коммуникации </p>
           </div>
         </div>
       </div>
@@ -125,9 +127,7 @@
 
 
       <div class="row">
-        <div class="col-12">
-          <h2 class="contact-title">По любым вопросам обращайтесь:</h2>
-        </div>
+       
 
         <div class="col-lg-4">
           <div class="media contact-info">
@@ -139,17 +139,17 @@
           <div class="media contact-info">
             <span class="contact-info__icon"><i class="ti-tablet"></i></span>
             <div class="media-body">
-              <h3><a href="callto:+380986929627">+380986929627</a></h3>
+              <h3><a href="tel:+380986929627">+380986929627</a></h3>
               <p>Kyivstar</p>
             </div>
           </div>
-		   <div class="media contact-info">
+          <div class="media contact-info">
             <span class="contact-info__icon"><i class="ti-email"></i></span>
             <div class="media-body">
-              <h3><a href="mailto: hi.tonyonair@gmail.com" target="_blank">hi.tonyonair@gmail.com</a></h3>	
+              <h3><a href="mailto: hi.tonyonair@gmail.com" target="_blank">hi.tonyonair@gmail.com</a></h3>
             </div>
           </div>
-		            <div class="media contact-info">
+          <div class="media contact-info">
             <span class="contact-info__icon"><i class="fa fa-youtube" aria-hidden="true"></i></span>
             <div class="media-body">
               <h3><a href="https://www.youtube.com/channel/UCX5pULXfxEvFd63sV4rYzXQ" target="_blank">Антон Грищенко</a>
@@ -160,42 +160,77 @@
             <span class="contact-info__icon"><i class="fa fa-instagram" aria-hidden="true"></i></span>
             <div class="media-body">
               <h3><a href="https://www.instagram.com/tony_on_air" target="_blank">tony_on_air</a></h3>
+              <p>Instagram</p>
             </div>
           </div>
           <div class="media contact-info">
             <span class="contact-info__icon"><i class="fa fa-telegram" style="font-size:24px"></i></span>
             <div class="media-body">
               <h3><a href="https://t.me/tonyonair" target="_blank">@tonyonair</a></h3>
+              <p>Telegram</p>
             </div>
-          </div>       
+          </div>
+
+
+        </div>
+
+        <div class="col-lg-8">
+          <iframe
+            src="https://docs.google.com/forms/d/e/1FAIpQLSdI9mAfFKZNf2ReWIWqsAidFoHOy5ws6Bz7rcBE9F5UTrBwYg/viewform?embedded=true"
+            width="100%" height="1294" frameborder="0" marginheight="0" marginwidth="10">Loading…</iframe>
         </div>
       </div>
     </div>
   </section>
   <!-- ================ contact section end ================= -->
 
-  <!-- footer start -->
-  <footer class="footer ">
-    <div class="footer_top">
 
-    </div>
-    <div class="copy-right_text">
-      <div class="container">
-        <div class="footer_border"></div>
-        <div class="row">
-          <div class="col-xl-12">
-            <p class="copy_right text-center">
-              <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-              Copyright &copy;
-              <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made
-              with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com"
-                target="_blank">Colorlib</a>
-              <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            </p>
+   <!-- footer start -->
+   <footer class="footer">
+      <div class="footer_top">
+          <div class="container">
+              <div class="row justify-content-center">
+                  <div class="col-md-3"><a href="works.html"
+                      >
+                      <div class="single_links d-flex justify-content-between align-items-center">
+                          <span>Работы</span>
+                      </div>
+                  </a>
+                  </div>
+                  <div class="col-md-3"><a href="services.html"
+                     >
+                      <div class="single_links d-flex justify-content-between align-items-center">
+                          <span>Услуги и цены</span>
+                      </div>
+                  </a>
+                  </div>
+                  <div class="col-md-3"><a href="feedback.html"
+                     >
+                      <div class="single_links d-flex justify-content-between align-items-center">
+                          <span>Отзывы</span>
+                      </div>
+                  </a>
+                  </div>
+              </div>
           </div>
-        </div>
       </div>
-    </div>
+      <div class="copy-right_text">
+          <div class="container">
+              <div class="footer_border"></div>
+              <div class="row">
+                  <div class="col-xl-12">
+                      <p class="copy_right text-center">
+                          <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                          Copyright &copy;
+                          <script>document.write(new Date().getFullYear());</script> All rights reserved | This
+                          template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a
+                              href="https://colorlib.com" target="_blank">Colorlib</a>
+                          <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                      </p>
+                  </div>
+              </div>
+          </div>
+      </div>
   </footer>
   <!--/ footer end  -->
 
