--- a/project2.html
+++ b/project2.html
@@ -88,7 +88,7 @@
                             <div class="col-xl-3 col-lg-3 d-none d-lg-block">
                                 <div class="Appointment">
                                     <div class="book_btn d-none d-lg-block">
-                                        <a href="https://t.me/tonyonair" target="_blank">СВЯЗАТЬСЯ</a>
+                                        <a href="contact.html">СВЯЗАТЬСЯ</a>
                                     </div>
                                 </div>
                             </div>
@@ -199,61 +199,61 @@
                                     </div </div> </div> </div> </div> </div> </div> </div> </div> <!-- /testimonial_area
                                         -->
 
-                                    <!-- footer start -->
-                                    <footer class="footer ">
-                                        <div class="footer_top">
-                                            <div class="container">
-                                                <div class="row justify-content-center">
-                                                    <div class="col-md-3"><a
-                                                            href="https://www.youtube.com/channel/UCX5pULXfxEvFd63sV4rYzXQ"
-                                                            target="_blank">
-                                                            <div
-                                                                class="single_links d-flex justify-content-between align-items-center">
-                                                                <span>YouTube</span>
-                                                            </div>
-                                                        </a>
-                                                    </div>
-                                                    <div class="col-md-3"><a
-                                                            href="https://www.instagram.com/tony_on_air/"
-                                                            target="_blank">
-                                                            <div
-                                                                class="single_links d-flex justify-content-between align-items-center">
-                                                                <span>Instagram</span>
-                                                            </div>
-                                                        </a>
-                                                    </div>
-                                                    <div class="col-md-3"><a href="https://t.me/tonyonair"
-                                                            target="_blank">
-                                                            <div
-                                                                class="single_links d-flex justify-content-between align-items-center">
-                                                                <span>Telegram</span>
-                                                            </div>
-                                                        </a>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="copy-right_text">
-                                            <div class="container">
-                                                <div class="footer_border"></div>
-                                                <div class="row">
-                                                    <div class="col-xl-12">
-                                                        <p class="copy_right text-center">
-                                                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                                                            Copyright &copy;
-                                                            <script>document.write(new Date().getFullYear());</script>
-                                                            All rights reserved | This
-                                                            template is made with <i class="fa fa-heart-o"
-                                                                aria-hidden="true"></i> by <a
-                                                                href="https://colorlib.com" target="_blank">Colorlib</a>
-                                                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                                                        </p>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </footer>
-                                    <!--/ footer end  -->
+                                  <!-- footer start -->
+    <footer class="footer">
+            <div class="footer_top">
+                <div class="container">
+                    <div class="row justify-content-center">
+                        <div class="col-md-3"><a href="contact.html"
+                                >
+                                <div class="single_links d-flex justify-content-between align-items-center">
+                                    <span>Контакты</span>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-md-3"><a href="works.html"
+                           >
+                            <div class="single_links d-flex justify-content-between align-items-center">
+                                <span>Работы</span>
+                            </div>
+                        </a>
+                        </div>
+                        <div class="col-md-3"><a href="services.html"
+                           >
+                            <div class="single_links d-flex justify-content-between align-items-center">
+                                <span>Услуги и цены</span>
+                            </div>
+                        </a>
+                        </div>
+                        <div class="col-md-3"><a href="feedback.html"
+                            >
+                            <div class="single_links d-flex justify-content-between align-items-center">
+                                <span>Отзывы</span>
+                            </div>
+                        </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="copy-right_text">
+                <div class="container">
+                    <div class="footer_border"></div>
+                    <div class="row">
+                        <div class="col-xl-12">
+                            <p class="copy_right text-center">
+                                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                                Copyright &copy;
+                                <script>document.write(new Date().getFullYear());</script> All rights reserved | This
+                                template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a
+                                    href="https://colorlib.com" target="_blank">Colorlib</a>
+                                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
+        <!--/ footer end  -->
 
                                     <!-- link that opens popup -->
                                     <script
