--- a/services.html
+++ b/services.html
@@ -88,7 +88,7 @@
                             <div class="col-xl-3 col-lg-3 d-none d-lg-block">
                                 <div class="Appointment">
                                     <div class="book_btn d-none d-lg-block">
-                                        <a href="https://t.me/tonyonair" target="_blank">СВЯЗАТЬСЯ</a>
+                                            <a href="contact.html">СВЯЗАТЬСЯ</a>
                                     </div>
                                 </div>
                             </div>
@@ -124,7 +124,7 @@
         <div class="container">
             <div class="service_wrap border border-top-0 border-left-0 border-right-0">
 
-                <div class="row align-items-center">
+                <div class="row align-items-center" style="padding-top: 20px">
                     <div class="col-lg-4 col-md-6">
                         <div class="single_service text-center ">
                             <div class="icon">
@@ -139,7 +139,6 @@
                             </p>
                         </div>
                     </div>
-                    <a name="chapter2"></a>
                     <div class="col-lg-8 col-md-6">
                         <div class="service_text padding_left">
 
@@ -157,6 +156,8 @@
                     </div>
                 </div>
             </div>
+            <a name="chapter2"></a>
+
             <div class="service_wrap border border-top-0 border-left-0 border-right-0">
 
                 <div class="row align-items-center">
@@ -174,7 +175,6 @@
                             </p>
                         </div>
                     </div>
-                    <a name="chapter3"></a>
                     <div class="col-lg-8 col-md-6">
                         <div class="service_text padding_left">
 
@@ -193,6 +193,8 @@
                     </div>
                 </div>
             </div>
+            <a name="chapter3"></a>
+
             <div class="service_wrap  ">
                 <div class="row align-items-center">
                     <div class="col-lg-4 col-md-6">
@@ -228,51 +230,60 @@
 
 
     <!-- footer start -->
-    <footer class="footer ">
-        <div class="footer_top">
-            <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-md-3"><a href="https://www.youtube.com/channel/UCX5pULXfxEvFd63sV4rYzXQ"
-                            target="_blank">
+    <footer class="footer">
+            <div class="footer_top">
+                <div class="container">
+                    <div class="row justify-content-center">
+                        <div class="col-md-3"><a href="contact.html"
+                               >
+                                <div class="single_links d-flex justify-content-between align-items-center">
+                                    <span>Контакты</span>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-md-3"><a href="works.html"
+                           >
                             <div class="single_links d-flex justify-content-between align-items-center">
-                                <span>YouTube</span>
+                                <span>Работы</span>
                             </div>
                         </a>
-                    </div>
-                    <div class="col-md-3"><a href="https://www.instagram.com/tony_on_air/" target="_blank">
+                        </div>
+                        <div class="col-md-3"><a href="services.html"
+                          >
                             <div class="single_links d-flex justify-content-between align-items-center">
-                                <span>Instagram</span>
+                                <span>Услуги и цены</span>
                             </div>
                         </a>
-                    </div>
-                    <div class="col-md-3"><a href="https://t.me/tonyonair" target="_blank">
+                        </div>
+                        <div class="col-md-3"><a href="feedback.html"
+                           >
                             <div class="single_links d-flex justify-content-between align-items-center">
-                                <span>Telegram</span>
+                                <span>Отзывы</span>
                             </div>
                         </a>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="copy-right_text">
-            <div class="container">
-                <div class="footer_border"></div>
-                <div class="row">
-                    <div class="col-xl-12">
-                        <p class="copy_right text-center">
-                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                            Copyright &copy;
-                            <script>document.write(new Date().getFullYear());</script> All rights reserved | This
-                            template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a
-                                href="https://colorlib.com" target="_blank">Colorlib</a>
-                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                        </p>
+            <div class="copy-right_text">
+                <div class="container">
+                    <div class="footer_border"></div>
+                    <div class="row">
+                        <div class="col-xl-12">
+                            <p class="copy_right text-center">
+                                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                                Copyright &copy;
+                                <script>document.write(new Date().getFullYear());</script> All rights reserved | This
+                                template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a
+                                    href="https://colorlib.com" target="_blank">Colorlib</a>
+                                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </footer>
-    <!--/ footer end  -->
+        </footer>
+        <!--/ footer end  -->
 
     <!-- link that opens popup -->
     <script src=" https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"> </script>
