- Added new works - Updated navigation (removed about) - Updated bottom sections (added social links)

--- a/project1.html
+++ b/project1.html
@@ -74,7 +74,6 @@
                                 <div class="main-menu  d-none d-lg-block">
                                     <nav>
                                         <ul id="navigation">
-                                            <li><a href="index.html">О СЕБЕ</a></li>
                                             <li><a href="works.html">РАБОТЫ</a></li>
                                             <li><a href="services.html">УСЛУГИ И ЦЕНЫ</a></li>
                                             <li><a href="feedback.html">ОТЗЫВЫ</a></li>
@@ -157,37 +156,22 @@
     </div>
 
 
-
-   <!-- footer start -->
-   <footer class="footer">
+    <!-- footer start -->
+    <footer class="footer">
         <div class="footer_top">
             <div class="container">
                 <div class="row justify-content-center">
-                    <div class="col-md-3"><a href="contact.html"
-                          >
-                            <div class="single_links d-flex justify-content-between align-items-center">
-                                <span>Контакты</span>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-md-3"><a href="works.html"
-                       >
+                    <div class="col-md-3"><a href="https://www.youtube.com/channel/UCX5pULXfxEvFd63sV4rYzXQ" target="_blank">                      
                         <div class="single_links d-flex justify-content-between align-items-center">
-                            <span>Работы</span>
+                            <span class="contact-info__icon"><i class="fa fa-youtube" aria-hidden="true"></i></span>
+                            <span>YouTube</span>
                         </div>
                     </a>
                     </div>
-                    <div class="col-md-3"><a href="services.html"
-                       >
+                    <div class="col-md-3"><a href="https://www.instagram.com/tony_on_air" target="_blank">                      
                         <div class="single_links d-flex justify-content-between align-items-center">
-                            <span>Услуги и цены</span>
-                        </div>
-                    </a>
-                    </div>
-                    <div class="col-md-3"><a href="feedback.html"
-                        >
-                        <div class="single_links d-flex justify-content-between align-items-center">
-                            <span>Отзывы</span>
+                            <span class="contact-info__icon"><i class="fa fa-instagram" aria-hidden="true"></i></span>
+                            <span>Instagram</span>
                         </div>
                     </a>
                     </div>
