--- a/contact.html
+++ b/contact.html
@@ -77,7 +77,6 @@
                 <div class="main-menu  d-none d-lg-block">
                   <nav>
                     <ul id="navigation">
-                      <li><a href="index.html">О СЕБЕ</a></li>
                       <li><a href="works.html">РАБОТЫ</a></li>
                       <li><a href="services.html">УСЛУГИ И ЦЕНЫ</a></li>
                       <li><a href="feedback.html">ОТЗЫВЫ</a></li>
@@ -86,13 +85,13 @@
                   </nav>
                 </div>
               </div>
-              <!-- <div class="col-xl-3 col-lg-3 d-none d-lg-block">
+              <div class="col-xl-3 col-lg-3 d-none d-lg-block">
                 <div class="Appointment">
-                  <div class="book_btn d-none d-lg-block">
-                    <a href="contact.html" target="_blank">СВЯЗАТЬСЯ</a>
-                  </div>
+                    <div class="book_btn d-none d-lg-block">
+                            <a href="https://books.tonyonair.com.ua" target="_blank">МОИ КНИГИ</a>
+                    </div>
                 </div>
-              </div> -->
+            </div>
               <div class="col-12">
                 <div class="mobile_menu d-block d-lg-none"></div>
               </div>
