--- a/project11-things-time.html
+++ b/project11-things-time.html
@@ -12,21 +12,14 @@
         gtag('config', 'UA-161686559-1');
     </script>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>BARBER</title>
+    <title>New Year in Warsaw 2020</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="keywords"
-        content="
-        Антон Грищенко, BARBER , барбершоп, , Грищенко, моя работа Грищенко, грищенко работы, Грищенко портфолио, Грищенко оператор, Видеооператор в Киеве, сценарист киев, монтаж киев, видеосьемка киев, сьемка клипов, отзывы Антон Грищенко, видеосъемка интервью, сьемка фильмов, сьемка короткометражного кино, создание промороликов, съемка backstage, съемка для YouTube
+        content="Антон Грищенко, New Year in Warsaw 2020, новый год в польше , передача про путешествия, тревел блог, туристическая польша, Грищенко, моя работа Грищенко, грищенко работы, Грищенко портфолио, Грищенко оператор, Видеооператор в Киеве, сценарист киев, монтаж киев, видеосьемка киев, сьемка клипов, отзывы Антон Грищенко, видеосъемка интервью, сьемка фильмов, сьемка короткометражного кино, создание промороликов, съемка backstage, съемка для YouTube
         , написание сценариев киев, монтаж видео, запись дикторского текста, сьемка рекламы,  tonyonair, Антон Грищенко инстаграм, антон Грищенко instagram, Грищенко Youtube, сьемка в киеве недорого, Грищенко телеграм, видеооператор связаться, портфолио монтажер, портфолио сценарист" />
-      <meta property="og:type" content="website" />
-    <meta name="og:site_name" content="TonyOnAir. Видеосъемка, видеооператор в Киеве, видеограф, сценарист, монтажер" />
-    <meta property="og:title"
-        content="TonyOnAir. Видеооператор в Киеве. Видеосъемка. Видеограф - ArtSpace Видеосъемка, видеооператор в Киеве, видеограф" />
-    <meta property="og:description"
-        content="TonyOnAir. Видеосъемка, видеооператор в Киеве, видеограф, сценарист, монтажер" />
-    <meta property="og:url" content="https://tonyonair.com.ua" />
-  
-    <meta name="description" content="Антон Грищенко, BARBER ,реклама барбершопа, грищенко работы, Грищенко портфолио, монтажер портфолио, сценарист портфолио,tonyonair"  />
+     
+
+    <meta name="description" content="Антон Грищенко, Видеосъемка, видеооператор в Киеве, видеограф, сценарист, монтажер, tonyonair" />
     <meta name="language" content="RU">
     <meta name="robots" content="index, follow">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -107,7 +100,7 @@
             <div class="row">
                 <div class="col-xl-12">
                     <div class="bradcam_text text-center">
-                        <h3>BARBER</h3>
+                        <h3 style="text-transform: none;">Вещи = Время ?</h3>
                     </div>
                 </div>
             </div>
@@ -120,7 +113,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-10">
                     <div class="video-container">
-                        <iframe src="https://www.youtube.com/embed/93svC0vYSg4" frameborder="0"
+                        <iframe src="https://www.youtube.com/embed/F4r3KAv8Q-c" frameborder="0"
                             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen></iframe>
                     </div>
@@ -131,17 +124,17 @@
                     <div class="col-xl-6 col-md-8 ">
                         <div class="single_details">
                             <h3>Описание</h3>
-                            <p>Репортажная съёмка с барбершопа, которая нашла свой выход в коротком документальном
-                                фильме.</p>
-
+                            <p>В данном видео, я делюсь мыслями о вещах, времени, перспективах. И даю себе ответ на вопрос: А стоят ли Вещи - времени моей жизни?
+                                Пример сьемки блога и моей личной работы в кадре.</p>
                         </div>
                         <div class="single_details">
                             <h3>Моя работа на съемочной площадке:</h3>
                             <ul style="color: #C9C9C9; list-style-type:square;">
                                 <li> — автор идеи;</li>
                                 <li> — разработка сценария;</li>
-                                <li> — съемка в интерьере;</li>
-                                <li> — озвучка;</li>
+                                <li> — съемка на натуре;</li>
+                                <li> — работа в кадре;</li>
+                                <li> — цветокоррекция;</li>
                                 <li> — монтаж.</li>
                             </ul>
                         </div>
@@ -153,60 +146,8 @@
     </div>
 
 
-    <!-- testimonial_area  -->
-    <div class="testimonial_area ">
-        <div class="container" style="margin-top: 0; margin-bottom: 50px">
-            <div class="row">
-                <div class="col-xl-12">
-                    <div class="section_title">
-                        <h3>Отзывы</h3>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xl-12">
 
-
-                    <div class="row">
-                        <div class="col-xl-12 col-md-9">
-                            <div class="single_testmonial">
-                                <p>"Участвовал в проекте Антона, мне очень понравилось. Снимали видео о моей работе, результат понравился. 
-                                    Антон старается найти такие решения, чтоб ваш видео-ролик получился в результате интересным. <br/>
-                                    Спасибо
-                                    "
-                                </p>
-                                <div class="testmonial_author">
-                                    <div class="thumb">
-                                        <img src="img/case/case6.png" alt="">
-                                    </div>
-                                    <div class="author_name">
-                                        <h3 style="color: white">Александр</h3>
-                                        <span>
-                                            <div class="media contact-info">
-                                                <span class="contact-info__icon"><i class="fa fa-instagram" style="color: #DB9A64"
-                                                        aria-hidden="true"></i></span>
-                                                        <div class="media-body fo">
-                                                            <h3><a href="https://www.instagram.com/shalom_byrber/"
-                                                                    target="_blank"><font size="4">Instagram</font></a></h3>
-                                                        </div>
-                                            </div>
-                                        </span>
-                                    </div
-                                </div>
-                            </div>
-
-                        </div>
-
-          
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- /testimonial_area  -->
-
-
-
+   
         <!-- footer start -->
         <footer class="footer">
             <div class="footer_top">
@@ -248,7 +189,6 @@
             </div>
         </footer>
         <!--/ footer end  -->
-
 
     <!-- link that opens popup -->
     <script src=" https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"> </script>
