--- a/project12-mars.html
+++ b/project12-mars.html
@@ -11,15 +11,17 @@
 
         gtag('config', 'UA-161686559-1');
     </script>
-    <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>ANTI-TRAVEL.special — Барселона, Андорра</title>
+    <title>New Year in Warsaw 2020</title>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="keywords"
-    content="
-    Антон Грищенко, ANTI-TRAVEL Барселона, Андорра , передача про путешествия, тревел блог, туристическая Барселона, туристическая Андорра, Грищенко, моя работа Грищенко, грищенко работы, Грищенко портфолио, Грищенко оператор, Видеооператор в Киеве, сценарист киев, монтаж киев, видеосьемка киев, сьемка клипов, отзывы Антон Грищенко, видеосъемка интервью, сьемка фильмов, сьемка короткометражного кино, создание промороликов, съемка backstage, съемка для YouTube
-    , написание сценариев киев, монтаж видео, запись дикторского текста, сьемка рекламы,  tonyonair, Антон Грищенко инстаграм, антон Грищенко instagram, Грищенко Youtube, сьемка в киеве недорого, Грищенко телеграм, видеооператор связаться, портфолио монтажер, портфолио сценарист" />
-  <meta property="og:type" content="website" />
- <meta name="description" content="Антон Грищенко, ANTI-TRAVEL Барселона, Андорра , передача про путешествия, грищенко работы, Грищенко портфолио, монтажер портфолио, сценарист портфолио,tonyonair ">
+        content="Антон Грищенко, New Year in Warsaw 2020, новый год в польше , передача про путешествия, тревел блог, туристическая польша, Грищенко, моя работа Грищенко, грищенко работы, Грищенко портфолио, Грищенко оператор, Видеооператор в Киеве, сценарист киев, монтаж киев, видеосьемка киев, сьемка клипов, отзывы Антон Грищенко, видеосъемка интервью, сьемка фильмов, сьемка короткометражного кино, создание промороликов, съемка backstage, съемка для YouTube
+        , написание сценариев киев, монтаж видео, запись дикторского текста, сьемка рекламы,  tonyonair, Антон Грищенко инстаграм, антон Грищенко instagram, Грищенко Youtube, сьемка в киеве недорого, Грищенко телеграм, видеооператор связаться, портфолио монтажер, портфолио сценарист" />
+     
+
+    <meta name="description" content="Антон Грищенко, Видеосъемка, видеооператор в Киеве, видеограф, сценарист, монтажер, tonyonair" />
+    <meta name="language" content="RU">
+    <meta name="robots" content="index, follow">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- <link rel="manifest" href="site.webmanifest"> -->
@@ -98,7 +100,7 @@
             <div class="row">
                 <div class="col-xl-12">
                     <div class="bradcam_text text-center">
-                        <h3 style="text-transform: none;">ANTI-TRAVEL.special — Барселона, Андорра</h3>
+                        <h3 style="text-transform: none;">Mars in the Kryvyi Rih</h3>
                     </div>
                 </div>
             </div>
@@ -107,11 +109,11 @@
     <!--/ bradcam_area  -->
 
     <div class="projects_details_area">
-        <div class="container pos_up" style="margin-bottom: -50px">
+        <div class="container pos_up">
             <div class="row justify-content-center">
                 <div class="col-lg-10">
                     <div class="video-container">
-                        <iframe src="https://www.youtube.com/embed/SRo7ulB8le0" frameborder="0"
+                        <iframe src="https://www.youtube.com/embed/0CFnYH2-usI" frameborder="0"
                             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen></iframe>
                     </div>
@@ -122,13 +124,14 @@
                     <div class="col-xl-6 col-md-8 ">
                         <div class="single_details">
                             <h3>Описание</h3>
-                            <p>Второй выпуск тревел блога, прямиком из Испании и Андорры.</p>
-
+                            <p>Сьемка с дроном Карьера в городе Кривой Рог.</p>
                         </div>
                         <div class="single_details">
                             <h3>Моя работа на съемочной площадке:</h3>
                             <ul style="color: #C9C9C9; list-style-type:square;">
-                                <li> - монтаж.</li>
+                                <li> — съемка с дрона;</li>
+                                <li> — цветокоррекция;</li>
+                                <li> — монтаж.</li>
                             </ul>
                         </div>
 
@@ -138,92 +141,10 @@
         </div>
     </div>
 
-    <!-- testimonial_area  -->
-    <div class="testimonial_area ">
-        <div class="container" style="margin-top: 0; margin-bottom: 50px">
-            <div class="row">
-                <div class="col-xl-12">
-                    <div class="section_title">
-                        <h3>Отзывы</h3>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xl-12">
 
 
-                    <div class="row">
-                        <div class="col-xl-12 col-md-9">
-                            <div class="single_testmonial">
-                                <p>"Антон делал нам монтаж видео, все быстро и качественно. Результат очень
-                                    понравился, рекомендую!"
-                                </p>
-                                <div class="testmonial_author">
-                                    <div class="thumb">
-                                        <img src="img/case/case7.png" alt="">
-                                    </div>
-                                    <div class="author_name">
-                                        <h3 style="color: white">Анна</h3>
-                                        <span>
-                                            <div class="media contact-info">
-                                                <span class="contact-info__icon"><i class="fa fa-instagram" style="color: #DB9A64"
-                                                        aria-hidden="true"></i></span>
-                                                <div class="media-body fo">
-                                                    <h3><a href="https://www.instagram.com/ann_minko/" target="_blank">
-                                                            <font size="4">Instagram</font>
-                                                        </a></h3>
-                                                </div>
-                                            </div>
-                                        </span>
-                                    </div
-                                </div>
-                            </div>
-
-                        </div>
-
-                        <div class="row">
-                            <div class="col-xl-12 col-md-9">
-                                <div class="single_testmonial">
-                                    <p>"Отснял несколько видео для тревел-блога, нужно было смонтировать. Обратился к
-                                        Антону, работать с ним в паре понравилось. Обращусь еще раз, как раз готовим
-                                        новое видео."
-                                    </p>
-                                    <div class="testmonial_author">
-                                        <div class="thumb">
-                                            <img src="img/case/case72.png" alt="">
-                                        </div>
-                                        <div class="author_name">
-                                            <h3 style="color: white">Олег</h3>
-                                            <span>
-                                                <div class="media contact-info">
-                                                    <span class="contact-info__icon"><i class="fa fa-instagram" style="color: #DB9A64"
-                                                            aria-hidden="true"></i></span>
-                                                    <div class="media-body fo">
-                                                        <h3><a href="https://www.instagram.com/by_olegminko/"
-                                                                target="_blank">
-                                                                <font size="4">Instagram</font>
-                                                            </a></h3>
-                                                    </div>
-                                                </div>
-                                            </span>
-                                        </div>
-                                    </div>
-                                </div>
-
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- /testimonial_area  -->
-
-
-
-
-    <!-- footer start -->
-    <footer class="footer">
+      <!-- footer start -->
+      <footer class="footer">
         <div class="footer_top">
             <div class="container">
                 <div class="row justify-content-center">
