--- a/project8.html
+++ b/project8.html
@@ -68,7 +68,6 @@
                                 <div class="main-menu  d-none d-lg-block">
                                     <nav>
                                         <ul id="navigation">
-                                            <li><a href="index.html">О СЕБЕ</a></li>
                                             <li><a href="works.html">РАБОТЫ</a></li>
                                             <li><a href="services.html">УСЛУГИ И ЦЕНЫ</a></li>
                                             <li><a href="feedback.html">ОТЗЫВЫ</a></li>
@@ -146,61 +145,50 @@
 
 
 
+   
+    
     <!-- footer start -->
     <footer class="footer">
-            <div class="footer_top">
-                <div class="container">
-                    <div class="row justify-content-center">
-                        <div class="col-md-3"><a href="contact.html"
-                               >
-                                <div class="single_links d-flex justify-content-between align-items-center">
-                                    <span>Контакты</span>
-                                </div>
-                            </a>
+        <div class="footer_top">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-md-3"><a href="https://www.youtube.com/channel/UCX5pULXfxEvFd63sV4rYzXQ" target="_blank">                      
+                        <div class="single_links d-flex justify-content-between align-items-center">
+                            <span class="contact-info__icon"><i class="fa fa-youtube" aria-hidden="true"></i></span>
+                            <span>YouTube</span>
                         </div>
-                        <div class="col-md-3"><a href="works.html"
-                          >
-                            <div class="single_links d-flex justify-content-between align-items-center">
-                                <span>Работы</span>
-                            </div>
-                        </a>
+                    </a>
+                    </div>
+                    <div class="col-md-3"><a href="https://www.instagram.com/tony_on_air" target="_blank">                      
+                        <div class="single_links d-flex justify-content-between align-items-center">
+                            <span class="contact-info__icon"><i class="fa fa-instagram" aria-hidden="true"></i></span>
+                            <span>Instagram</span>
                         </div>
-                        <div class="col-md-3"><a href="services.html"
-                           >
-                            <div class="single_links d-flex justify-content-between align-items-center">
-                                <span>Услуги и цены</span>
-                            </div>
-                        </a>
-                        </div>
-                        <div class="col-md-3"><a href="feedback.html"
-                            >
-                            <div class="single_links d-flex justify-content-between align-items-center">
-                                <span>Отзывы</span>
-                            </div>
-                        </a>
-                        </div>
+                    </a>
                     </div>
                 </div>
             </div>
-            <div class="copy-right_text">
-                <div class="container">
-                    <div class="footer_border"></div>
-                    <div class="row">
-                        <div class="col-xl-12">
-                            <p class="copy_right text-center">
-                                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                                Copyright &copy;
-                                <script>document.write(new Date().getFullYear());</script> All rights reserved | This
-                                template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a
-                                    href="https://colorlib.com" target="_blank">Colorlib</a>
-                                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                            </p>
-                        </div>
+        </div>
+        <div class="copy-right_text">
+            <div class="container">
+                <div class="footer_border"></div>
+                <div class="row">
+                    <div class="col-xl-12">
+                        <p class="copy_right text-center">
+                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                            Copyright &copy;
+                            <script>document.write(new Date().getFullYear());</script> All rights reserved | This
+                            template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a
+                                href="https://colorlib.com" target="_blank">Colorlib</a>
+                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                        </p>
                     </div>
                 </div>
             </div>
-        </footer>
-        <!--/ footer end  -->
+        </div>
+    </footer>
+    <!--/ footer end  -->
+
 
     <!-- link that opens popup -->
     <script src=" https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"> </script>
