Updated services rates

--- a/services.html
+++ b/services.html
@@ -134,7 +134,7 @@
                                 Видеооператор
                             </h2>
                             <p class="border border-white; text-center" style="color: white">
-                                От 200 грн за час <br />Минимальный заказ 2 часа
+                                От 500 грн за час <br />Минимальный заказ 2 часа
                             </p>
                         </div>
                     </div>
@@ -170,7 +170,7 @@
                                 Сценарист
                             </h2>
                             <p class="border border-white; text-center" style="color: white">
-                                От 350 грн за 5 страниц <br /> готового сценария
+                                От 1500 грн за 5 страниц <br /> готового сценария
                             </p>
                         </div>
                     </div>
@@ -206,7 +206,7 @@
                                 Монтажер
                             </h2>
                             <p class="border border-white; text-center" style="color: white">
-                                &nbsp;<br />От 500 грн за ролик
+                                &nbsp;<br />50% от стоимости сьемки
                             </p>
                         </div>
                     </div>
